create endpoints for zampakuto module
